# advent-of-code-2024

./: Cargo.toml
2024/: Cargo.toml
2024/day-01/: main.rs
2024/day-02/: main.rs
2024/day-03/: main.rs
2024/day-04/: main.rs
2024/day-05/: main.rs
2024/day-06/: main.rs
2024/day-07/: main.rs
2024/day-08/: main.rs
2024/day-09/: main.rs
2024/day-10/: main.rs
2024/day-11/: main.rs
2024/day-12/: main.rs
2024/day-13/: main.rs
2024/day-14/: main.rs
2024/day-15/: main.rs
2024/day-16/: main.rs
2024/day-17/: main.rs
2024/day-18/: main.rs
2024/day-19/: main.rs
2024/day-20/: main.rs
2024/day-21/: main.rs
2024/src/: cli.rs
2024/src/matrix/: matrix.rs  mod.rs
2025/: Cargo.toml
2025/day-01/: main.rs
2025/day-02/: main.rs
2025/day-03/: main.rs
2025/day-04/: main.rs
2025/day-05/: main.rs
2025/day-06/: main.rs
2025/day-07/: main.rs
common/: Cargo.toml
common/src/matrix/: coord.rs  matrix.rs
day-01/: main.rs
day-01/src/: main.rs
day-02/: main.rs
day-02/src/: main.rs
day-03/: main.rs
day-03/src/: main.rs
day-04/: main.rs
day-04/src/: main.rs
day-05/: main.rs
day-05/src/: main.rs
day-06/: main.rs
day-06/src/: main.rs
day-07/: main.rs
day-07/src/: main.rs
day-08/: main.rs
day-08/src/: main.rs
day-09/: main.rs
day-09/src/: main.rs
day-10/: main.rs
day-11/: main.rs
day-12/: main.rs
day-13/: main.rs
day-14/: main.rs
day-15/: main.rs
day-16/: main.rs
day-19/: main.rs
day-20/: main.rs
src/: cli.rs  lib.rs
src/matrix/: coord.rs  matrix.rs  vector.rs
