[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day-01"
path = "day-01/main.rs"

[[bin]]
name = "day-02"
path = "day-02/main.rs"

[[bin]]
name = "day-03"
path = "day-03/main.rs"

[[bin]]
name = "day-04"
path = "day-04/main.rs"

[[bin]]
name = "day-05"
path = "day-05/main.rs"

[[bin]]
name = "day-06"
path = "day-06/main.rs"

[[bin]]
name = "day-07"
path = "day-07/main.rs"

[[bin]]
name = "day-08"
path = "day-08/main.rs"

[[bin]]
name = "day-09"
path = "day-09/main.rs"

[[bin]]
name = "day-10"
path = "day-10/main.rs"

[dependencies]
itertools = "0.13.0"
regex = "1.11.1"
