[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day-01"
path = "day-01/main.rs"

[[bin]]
name = "day-02"
path = "day-02/main.rs"

[[bin]]
name = "day-03"
path = "day-03/main.rs"

[[bin]]
name = "day-04"
path = "day-04/main.rs"

[[bin]]
name = "day-05"
path = "day-05/main.rs"

[[bin]]
name = "day-06"
path = "day-06/main.rs"

[[bin]]
name = "day-07"
path = "day-07/main.rs"

[[bin]]
name = "day-08"
path = "day-08/main.rs"

[[bin]]
name = "day-09"
path = "day-09/main.rs"

[[bin]]
name = "day-10"
path = "day-10/main.rs"

[[bin]]
name = "day-11"
path = "day-11/main.rs"

[[bin]]
name = "day-12"
path = "day-12/main.rs"

[[bin]]
name = "day-13"
path = "day-13/main.rs"

[[bin]]
name = "day-14"
path = "day-14/main.rs"

[[bin]]
name = "day-15"
path = "day-15/main.rs"

[[bin]]
name = "day-16"
path = "day-16/main.rs"

[[bin]]
name = "day-17"
path = "day-17/main.rs"

[[bin]]
name = "day-18"
path = "day-18/main.rs"

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["derive"] }
itertools = "0.13.0"
pathfinding = "4.12.0"
regex = "1.11.1"
