[package]
name = "advent-of-code-2025"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
clap.workspace = true
common = { path = "../common" }

[[bin]]
name = "2025-day-01"
path = "day-01/main.rs"

[[bin]]
name = "2025-day-02"
path = "day-02/main.rs"

[[bin]]
name = "2025-day-03"
path = "day-03/main.rs"
